# UAP-DM

./: README.md  Requirements.txt  pyproject.toml
src/: Klasifikasi_fnn.py  app.py  klasifikasi_tabnet.py  mainPage.py
src/model/Tabular/: fnn_model.h5  scaler.joblib  tabnet_model.pth  tabular.h5  tabular.joblib
