[project]
name = "ML-UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AGhafurr", email = "aghafurabdul@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0", "joblib>=1.4.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run ./src/app/py"